--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.20.1",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
+    "bulma": "^0.9.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -23,7 +17,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css-watch": "npm run css-build -- --watch",
+    "css-build": "node-sass --omit-source-map-url sass/custom-styles.scss src/components/App/main.css",
+    "svgr": "svgr --icon -d src/components/Icons public/icons"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +41,15 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.16"
+    "@svgr/cli": "^5.5.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.1",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^12.20.1",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
+    "node-sass": "^5.0.0"
   }
 }
