Eslint and tsconfig updates to work in peace

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -16,7 +16,11 @@
     "downlevelIteration": true,
     "paths": {
       "components/*": ["src/components/*"]
-    }
+    },
+    "outDir": "../build"
   },
-  "include": ["./src", "./webpack.config.ts"]
+
+  "typeRoots": ["./src/types", "./node_modules/@types"],
+  "include": ["src/**/*", "./webpack.config.ts"],
+  "exclude": ["src/**/*.test.tsx"]
 }
