--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -15,9 +15,10 @@
     "plugin:testing-library/react",
     "plugin:prettier/recommended"
   ],
+  "ignorePatterns": ["**/*.test.tsx"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "client/tsconfig.json"
+    "project": "tsconfig.json"
   },
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
