--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack-cli serve --mode=development --env development --open --hot --host 127.0.0.1 --port 3000 --env API_SERVER=http://127.0.0.1:8080",
     "build": "webpack --mode=production --env production --progress",
     "css-watch": "npm run css-build -- --watch",
     "css-build": "node-sass --omit-source-map-url sass/custom-styles.scss src/components/App/main.css",
     "svgr": "svgr --icon -d src/components/Icons public/icons"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "keywords": [],
   "author": "",
@@ -27,6 +32,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
+    "@types/socket.io-client": "^1.4.35",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -43,6 +49,7 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-webpack-plugin": "^5.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
@@ -65,6 +72,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "socket.io-client": "^3.1.1",
     "yup": "^0.32.9"
   }
 }
