--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' -T ./src/server.ts",
-    "tsc": "tsc"
+    "build": "tsc --project ./",
+    "start": "node ./build/server.js"
   },
   "author": "Emre Dalkiran",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "@babel/preset-env": "^7.12.1",
     "@types/bcrypt": "^3.0.0",
     "@types/connect-redis": "0.0.16",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
@@ -23,6 +25,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.4.0",
     "babel-loader": "^8.1.0",
     "eslint": "^7.7.0",
     "eslint-config-node": "^4.1.0",
@@ -40,6 +43,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-redis": "^5.0.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
@@ -49,8 +53,11 @@
     "helmet": "^4.2.0",
     "joi": "^17.2.1",
     "mongodb": "^3.6.0",
+    "path": "^0.12.7",
     "redis": "^3.0.2",
+    "socket.io": "^3.1.1",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "ws": "^7.4.3"
   }
 }
