.env file for server added

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-URL=127.0.0.1:27017
-DATABASE_NAME=test
+URL=mongo:27017
+DATABASE_NAME=shoppingcart
 PORT=8080
 SESSION_SECRET=superhardtoGuessSecret192837465.,!
